--- a/ui/results.html
+++ b/ui/results.html
@@ -35,6 +35,8 @@
     .pill.resolved { background:rgba(0,255,65,0.18); }
     .resolved-card { margin-top:28px; padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.35); background:rgba(0,255,65,0.08); box-shadow:0 0 28px rgba(0,255,65,0.22); }
     .resolved-card ul { margin:12px 0 0; padding-left:22px; color:var(--muted); line-height:1.6; }
+    /* Defensive: if any stray bullet list appears immediately after the resolved card, hide it */
+    .resolved-card + ul { display:none; }
 
     details { border:1px solid rgba(0,255,65,0.2); border-radius:16px; padding:20px 24px; background:rgba(0,0,0,0.35); margin-top:28px; }
     summary { cursor:pointer; font-weight:600; font-size:16px; }
