--- a/ui/index.html
+++ b/ui/index.html
@@ -808,21 +808,8 @@
                 lines.push('Policy support exists, but build‑out typically lags approvals.');
               }
             }
-            // Stance line last
-            var stance;
-            if (probValue >= 0.6) stance = 'leans true';
-            else if (probValue <= 0.4) stance = 'leans false';
-            else stance = 'is mixed';
-            var webStance;
-            if (isWebMode && webBlock && typeof webBlock.p === 'number') {
-              webStance = webBlock.p >= 0.6 ? 'lean true' : (webBlock.p <= 0.4 ? 'lean false' : 'are mixed');
-            } else {
-              webStance = stance === 'leans true' ? 'agree' : (stance === 'leans false' ? 'agree' : 'are mixed');
-            }
-            var stanceLine = isWebMode
-              ? ('The model ' + stance + ', and recent sources ' + (webStance === 'lean true' || webStance === 'lean false' ? 'agree' : 'are mixed') + '; overall it’s ' + verdictLabel.toLowerCase() + '.')
-              : ('The model ' + stance + '; overall it’s ' + verdictLabel.toLowerCase() + '.');
-            lines.push(stanceLine);
+            // Summary line (no model/source stance wording); just a verdict tie-in
+            lines.push('Taken together, these points suggest the claim is ' + verdictLabel.toLowerCase() + '.');
             // Render up to 4
             for (var i = 0; i < lines.length && i < 4; i++) {
               var li = document.createElement('li');
