Simple View: strip BrandName: prefixes in SPA; avoid double-escape on server; ensure summary last.

--- a/ui/index.html
+++ b/ui/index.html
@@ -756,6 +756,8 @@
               if (typeof s !== 'string') return '';
               var t = s.trim();
               t = t.replace(/^\s*(?:[A-Za-z0-9.-]+\.(?:com|org|net|gov|edu|news|io|co|uk|us|ca|au|de|fr))\s*[:—-]\s*/i, '');
+              // strip leading BrandName: (with colon)
+              t = t.replace(/^\s*[A-Z][\w&-]*(?:\s+[A-Z][\w&-]*){0,3}\s*:\s*/i, '');
               t = t.replace(/\s*\([^)]*\b(?:com|org|net|gov|edu|news|io|co|uk|us|ca|au|de|fr)\b[^)]*\)\s*$/i, '');
               t = t.replace(/\s*\[[^\]]*\b(?:com|org|net|gov|edu|news|io|co|uk|us|ca|au|de|fr)\b[^\]]*\]\s*$/i, '');
               // Strip leading brand names before reporting verbs
