[RPL][Phase-1] Baseline Simple View matches web mode
- add compose_baseline_simple_expl and call it in pipeline baseline runs\n- add CLI regression ensuring baseline mock includes simple_expl\n- hide interpretation sentence in SPA/local UI whenever simple_expl exists

--- a/ui/index.html
+++ b/ui/index.html
@@ -658,7 +658,7 @@
 
         var simpleExpl = data.simple_expl;
         if (resultInterpretationMain) {
-          if (isWebMode && simpleExpl && Array.isArray(simpleExpl.lines) && simpleExpl.lines.length) {
+          if (simpleExpl && Array.isArray(simpleExpl.lines) && simpleExpl.lines.length) {
             resultInterpretationMain.textContent = '';
             resultInterpretationMain.classList.add('hidden');
           } else {
