--- a/ui/results.html
+++ b/ui/results.html
@@ -31,6 +31,7 @@
     .card { padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.2); background:var(--card); box-shadow:0 0 24px rgba(0,0,0,0.25); }
     .card h2 { margin:0 0 12px; font-size:20px; }
     .card ul { margin:0; padding-left:22px; color:var(--muted); line-height:1.6; }
+    .simple-summary { margin-top:12px; font-weight:600; color:var(--fg); }
     .pill { display:inline-flex; align-items:center; gap:6px; padding:6px 12px; border-radius:999px; font-size:12px; letter-spacing:1px; text-transform:uppercase; border:1px solid rgba(0,255,65,0.4); color:var(--bright); background:rgba(0,255,65,0.1); margin-bottom:16px; }
     .pill.resolved { background:rgba(0,255,65,0.18); }
     .resolved-card { margin-top:28px; padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.35); background:rgba(0,255,65,0.08); box-shadow:0 0 28px rgba(0,255,65,0.22); }
