--- a/ui/results.html
+++ b/ui/results.html
@@ -3,61 +3,57 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Heretix · Result</title>
+  <title>Heretix · Results</title>
   <style>
     :root {
-      --bg: #060606;
-      --fg: #e3ffe3;
-      --muted: #8ea88e;
+      --bg: #050505;
+      --fg: #f2fff2;
+      --muted: #9cb39c;
       --bright: #00ff41;
-      --warn: #ffb347;
       --card: rgba(255,255,255,0.02);
-      --border: rgba(0,255,65,0.3);
+      --border: rgba(0,255,65,0.25);
     }
     * { box-sizing:border-box; }
-    html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:"Inter", "Helvetica Neue", Arial, sans-serif; }
+    html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:"Inter","Helvetica Neue",Arial,sans-serif; }
     a { color:var(--bright); text-decoration:none; }
-    .wrap { max-width:960px; margin:0 auto; padding:48px 20px 80px; }
-    .back { display:inline-flex; align-items:center; gap:6px; color:var(--muted); font-size:14px; text-transform:uppercase; letter-spacing:1px; }
+    .wrap { max-width:1100px; margin:0 auto; padding:48px 20px 80px; }
+    .back { display:inline-flex; align-items:center; gap:6px; color:var(--muted); font-size:14px; letter-spacing:1px; text-transform:uppercase; }
     .back:hover { color:var(--bright); }
 
-    .hero { margin-top:28px; padding:32px; border-radius:20px; background:radial-gradient(circle at top, rgba(0,255,65,0.18), rgba(0,0,0,0.65)); border:1px solid var(--border); box-shadow:0 0 42px rgba(0,255,65,0.25); display:flex; flex-wrap:wrap; gap:34px; align-items:center; justify-content:space-between; }
-    .percent { font-size:clamp(72px, 12vw, 128px); line-height:1; color:var(--bright); text-shadow:0 0 36px rgba(0,255,65,0.35); font-weight:700; }
-    .verdict { font-size:20px; text-transform:uppercase; letter-spacing:3px; margin-top:8px; }
-    .claim { font-size:20px; line-height:1.5; margin:12px 0 0; color:var(--fg); }
-    .interpretation { font-size:18px; color:var(--muted); margin-top:16px; max-width:480px; }
+    .hero { margin-top:32px; padding:28px; border-radius:20px; border:1px solid var(--border); background:radial-gradient(circle at top, rgba(0,255,65,0.15), rgba(0,0,0,0.75)); box-shadow:0 0 42px rgba(0,255,65,0.18); }
+    .hero-label { text-transform:uppercase; font-size:13px; letter-spacing:2px; color:var(--muted); margin:0 0 8px; }
+    .hero h1 { margin:0; font-size:clamp(28px,5vw,42px); line-height:1.3; }
+    .hero-note { margin:14px 0 0; color:var(--muted); font-size:15px; }
 
-    .stack { margin-top:48px; display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:24px; }
-    .card { padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.2); background:var(--card); box-shadow:0 0 24px rgba(0,0,0,0.25); }
-    .card h2 { margin:0 0 12px; font-size:20px; }
-    .card ul { margin:0; padding-left:22px; color:var(--muted); line-height:1.6; }
-    .pill { display:inline-flex; align-items:center; gap:6px; padding:6px 12px; border-radius:999px; font-size:12px; letter-spacing:1px; text-transform:uppercase; border:1px solid rgba(0,255,65,0.4); color:var(--bright); background:rgba(0,255,65,0.1); margin-bottom:16px; }
-    .pill.resolved { background:rgba(0,255,65,0.18); }
-    .resolved-card { margin-top:28px; padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.35); background:rgba(0,255,65,0.08); box-shadow:0 0 28px rgba(0,255,65,0.22); }
-    .resolved-card ul { margin:12px 0 0; padding-left:22px; color:var(--muted); line-height:1.6; }
-    /* Defensive: if any stray bullet list appears immediately after the resolved card, hide it */
-    .resolved-card + ul { display:none; }
+    .card-grid { margin-top:36px; display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:24px; }
+    .result-card { border:1px solid rgba(0,255,65,0.25); border-radius:18px; padding:24px; background:var(--card); box-shadow:0 0 32px rgba(0,0,0,0.35); display:flex; flex-direction:column; gap:16px; }
+    .card-pill { display:inline-flex; align-items:center; padding:6px 12px; border-radius:999px; border:1px solid rgba(0,255,65,0.35); font-size:12px; text-transform:uppercase; letter-spacing:1px; color:var(--bright); background:rgba(0,255,65,0.08); }
+    .card-percent { font-size:clamp(48px,6vw,72px); font-weight:700; color:var(--bright); text-shadow:0 0 26px rgba(0,255,65,0.35); }
+    .card-verdict { font-size:16px; text-transform:uppercase; letter-spacing:2px; color:var(--muted); }
+    .card-summary { margin:0; font-size:16px; line-height:1.6; color:var(--fg); }
+    .card-lines { margin:0; padding-left:20px; color:var(--muted); line-height:1.5; }
+    .card-lines li { margin-bottom:6px; }
+    .resolved-note { border:1px solid rgba(0,255,65,0.4); border-radius:14px; padding:12px 16px; background:rgba(0,255,65,0.12); font-size:14px; }
+    .resolved-note.false { border-color:#ff6b6b; background:rgba(255,107,107,0.12); }
 
-    details { border:1px solid rgba(0,255,65,0.2); border-radius:16px; padding:20px 24px; background:rgba(0,0,0,0.35); margin-top:28px; }
-    summary { cursor:pointer; font-weight:600; font-size:16px; }
-    details[open] summary { color:var(--bright); }
-    .advanced-grid { margin-top:18px; display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:18px; color:var(--muted); }
-    .metric-label { font-size:13px; letter-spacing:1px; text-transform:uppercase; color:rgba(0,255,65,0.7); margin-bottom:4px; }
-    .metric-value { font-size:22px; color:var(--fg); }
+    .card-details { border:1px solid rgba(0,255,65,0.2); border-radius:14px; padding:16px 18px; background:rgba(0,0,0,0.35); }
+    .card-details summary { cursor:pointer; font-weight:600; color:var(--fg); }
+    .metric-grid { margin-top:14px; display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:12px; }
+    .metric-label { font-size:12px; text-transform:uppercase; letter-spacing:1px; color:rgba(0,255,65,0.7); }
+    .metric-value { font-size:18px; color:var(--fg); }
 
     .actions { margin-top:40px; display:flex; flex-wrap:wrap; gap:16px; }
     .btn { display:inline-flex; align-items:center; justify-content:center; padding:14px 22px; border-radius:14px; font-weight:600; border:0; cursor:pointer; transition:transform 0.2s ease, box-shadow 0.2s ease; }
-    .btn-primary { background:var(--bright); color:#041105; box-shadow:0 16px 32px rgba(0,255,65,0.18); }
-    .btn-primary:hover { transform:translateY(-2px); box-shadow:0 20px 36px rgba(0,255,65,0.28); }
-    .btn-secondary { background:rgba(255,255,255,0.08); color:var(--fg); border:1px solid rgba(0,255,65,0.2); }
-    .btn-secondary:hover { transform:translateY(-2px); border-color:rgba(0,255,65,0.4); }
+    .btn-primary { background:var(--bright); color:#041105; box-shadow:0 16px 32px rgba(0,255,65,0.2); }
+    .btn-primary:hover { transform:translateY(-2px); box-shadow:0 18px 40px rgba(0,255,65,0.3); }
+    .btn-secondary { background:rgba(255,255,255,0.08); color:var(--fg); border:1px solid rgba(0,255,65,0.3); }
+    .btn-secondary:hover { transform:translateY(-2px); border-color:rgba(0,255,65,0.5); }
 
-    .note { margin-top:12px; color:var(--muted); font-size:13px; }
+    .card-copy { align-self:flex-start; }
 
-    @media (max-width:640px){
-      .hero { padding:24px; }
-      .interpretation { max-width:none; }
-      .actions { flex-direction:column; align-items:stretch; }
+    @media (max-width:640px) {
+      .hero { padding:20px; }
+      .card-grid { grid-template-columns:1fr; }
     }
   </style>
 </head>
@@ -66,58 +62,26 @@
     <a class="back" href="/?quick=1">← New claim</a>
 
     <section class="hero">
-      <div>
-        <div class="pill">{UI_MODEL} · {UI_MODE}</div>
-        <div class="percent">{PERCENT}</div>
-        <div class="verdict">{VERDICT}</div>
-      </div>
-      <div>
-        <div class="claim">“{CLAIM}”</div>
-        <div class="interpretation">{INTERPRETATION}</div>
-      </div>
+      <p class="hero-label">Claim evaluated</p>
+      <h1>“{CLAIM}”</h1>
+      <p class="hero-note">{MODEL_NOTE}</p>
     </section>
 
-    {STACK_BLOCK}
-
-    {RESOLVED_BLOCK}
-
-    {DEEPER_BLOCK}
-
-    <details>
-      <summary>Advanced details</summary>
-      <div class="advanced-grid">
-        <div>
-          <div class="metric-label">Confidence width</div>
-          <div class="metric-value">{ADV_WIDTH}</div>
-        </div>
-        <div>
-          <div class="metric-label">Template stability</div>
-          <div class="metric-value">{ADV_STABILITY}</div>
-        </div>
-        <div>
-          <div class="metric-label">Policy compliance</div>
-          <div class="metric-value">{ADV_COMPLIANCE}</div>
-        </div>
-        {ADV_EXTRA}
-      </div>
-      <p class="note">{ADV_NOTE}</p>
-    </details>
+    <div class="card-grid">
+      {CARDS_BLOCK}
+    </div>
 
     <div class="actions">
       <a class="btn btn-primary" href="/?quick=1">Ask another claim</a>
-      <button class="btn btn-secondary" id="copy-summary" data-summary="{SUMMARY_ATTR}">Copy summary</button>
     </div>
   </div>
 
   <script>
     (function(){
-      var btn = document.getElementById('copy-summary');
-      if (!btn) return;
-      var summaryText = btn.getAttribute('data-summary') || '';
-      btn.addEventListener('click', function(){
+      function copyText(text) {
         if (!navigator.clipboard) {
           var textarea = document.createElement('textarea');
-          textarea.value = summaryText;
+          textarea.value = text;
           textarea.setAttribute('readonly', '');
           textarea.style.position = 'absolute';
           textarea.style.left = '-9999px';
@@ -125,11 +89,17 @@
           textarea.select();
           document.execCommand('copy');
           document.body.removeChild(textarea);
-        } else {
-          navigator.clipboard.writeText(summaryText).catch(function(){ /* silent */ });
+          return;
         }
-        btn.textContent = 'Summary copied!';
-        setTimeout(function(){ btn.textContent = 'Copy summary'; }, 2000);
+        navigator.clipboard.writeText(text).catch(function(){ /* noop */ });
+      }
+      document.querySelectorAll('.card-copy').forEach(function(btn){
+        btn.addEventListener('click', function(){
+          var summaryText = btn.getAttribute('data-summary') || '';
+          copyText(summaryText);
+          btn.textContent = 'Summary copied!';
+          setTimeout(function(){ btn.textContent = 'Copy summary'; }, 2000);
+        });
       });
     })();
   </script>
